fixed skills and pics

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <br>
     <div id="experience" class="row">
         <h2>Skills</h2>
-        <p class="lead"><strong>Javascript, React, HTML/CSS, NodeJS, ExpressJS,</strong> Socket.io, Auth.io, Angular, Mithril, SQL, Postgres, MongoDB, Github, Git, NetSuite, Salesforce, Passport, Heroku, Grunt, Chai, Mocha, Cron, Browserify, NPM.</p>
+        <p class="lead"><strong>Javascript, React, HTML/CSS, NodeJS, ExpressJS,</strong> Socket.io, Auth.io, Angular, Mithril, SQL, Postgres, MongoDB, Github, Git, NetSuite,<br> Salesforce, Passport, Heroku, Grunt, Chai, Mocha, Cron, Browserify, NPM.</p>
         <div class="col-md-6">
             <div class="experience">
                 <div class="media">
