Updated pictures, fixed navbar and punctuation, added opacity to pic

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
+
     <!-- Home. General information, navigation and photo -->
-    <div class="cover img-responsive">
+    <div class="cover">
         <div class="navbar">
             <ol class="breadcrumb">
                 <li><a href="#">Home</a></li>
@@ -50,7 +51,7 @@
             <p>in business and management at some of the largest financial institutions in </p>
             <p>the country. I consider myself a self-starter and have a passion for finding simple </p>
             <p>solutions for complex problems by implementing and learning new technologies.</p>
-            <p>I have an entrepeneur mindset and always look for the business side of any situation.</p>
+            <p>I have an entrepeneur mindset and always look for the business side of any idea.</p>
             <p>Above all, I enjoy learning and sharing my knowledge with others to accomplish a common goal.</p>
         </div>
         <!-- Pics of recent achievements -->
@@ -84,7 +85,7 @@
     </div>
     <!-- Most recent projects. Display top 3 with access to code repository -->
     <div class="projects" id="projects">
-        <div class="row">
+        <div class="row text">
             <h2>Recent Projects</h2>
             <br>
             <div class="col-md-4">
@@ -225,7 +226,7 @@
                     <ul>
                         <li>School of Advance Software Engineering</li>
                         <li>Computer Science</li>
-                        <li>Program focused in Javascript and most recent programming frameworks</li>
+                        <li>Program focused in Javascript and most recent programming frameworks.</li>
                     </ul>
                 </div>
             </div>
@@ -242,7 +243,7 @@
                     <h4 class="media-heading">University of Texas at El Paso</h4>
                     <ul>
                         <li>BBA</li>
-                        <li>Double major in International Business & Management</li>
+                        <li>Double major in International Business & Management.</li>
                     </ul>
                 </div>
             </div>
@@ -258,7 +259,7 @@
                 <div class="media-body">
                     <h4 class="media-heading">Speak and write professional Spanish</h4>
                     <ul>
-                        <li>Lived in Mexico and Spain</li>
+                        <li>Lived in Mexico and Spain.</li>
                     </ul>
                 </div>
             </div>
