--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <h2 id="intro">Hello and thanks for visiting</h2>
     <div class="container">
         <div class="lead">
-            <p>I am Walter Ayala, I am a motivated Full Stack Engineer with a background </p>
-            <p>in business and management at some of the largest financial institutions in </p>
-            <p>the country. I consider myself a self-starter and have a passion for finding simple </p>
-            <p>solutions for complex problems by implementing and learning new technologies.</p>
-            <p>I have an entrepeneur mindset and always look for the business side of any idea.</p>
-            <p>Above all, I enjoy learning and sharing my knowledge with others to accomplish a common goal.</p>
+            <p class="text-align">I am Walter Ayala, I am a motivated Full Stack Engineer with a background 
+            in business and management at some of the largest financial institutions in 
+            the country. I consider myself a self-starter and have a passion for finding simple 
+            solutions for complex problems by implementing and learning new technologies.
+            I have an entrepeneur mindset and always look for the business side of any idea.
+            Above all, I enjoy learning and sharing my knowledge with others to accomplish a common goal.</p>
         </div>
         <!-- Pics of recent achievements -->
         <div class="row">
@@ -89,7 +89,7 @@
             <h2>Recent Projects</h2>
             <br>
             <div class="col-md-4">
-                <h3>QuickerCater, <span>Full Stack Engineer</span></h3>
+                <h3><strong>QuickerCater</strong>, <span>Full Stack Engineer</span></h3>
                 <ul>
                     <li>Designed application structure and features based on customer/owner feedback.</li>
                     <li>Tested different stacks and libraries to find the most effective way to communicate front-end with back-end to represent data pertaining to menus, cart and stores.</li>
@@ -97,7 +97,7 @@
                 </ul><a class="btn btn-default" href="https://github.com/walterayalae/quickercater" role="button">View Code &raquo;</a></p>
             </div>
             <div class="col-md-4">
-                <h3>Credz, <span>Full Stack Engineer</span></h3>
+                <h3><strong>Credz</strong>, <span>Full Stack Engineer</span></h3>
                 <ul>
                     <li>Dating application that matches users by credit score. Created during the Austin Diversity Hackathon 2016.</li>
                     <li>Implemented with HTML/CSS, Bootstrap, Node.js, Express and Mongoose.</li>
@@ -106,7 +106,7 @@
                 </ul><a class="btn btn-default" href="https://github.com/MaximusLiv3/ubiquitous-system" role="button">View Code &raquo;</a></p>
             </div>
             <div class="col-md-4">
-                <h3>Hangman Game, <span>Back-end Engineer</span></h3>
+                <h3><strong>Hangman Game</strong>, <span>Back-end Engineer</span></h3>
                 <ul>
                     <li>Designed back-end development for game interaction and responsiveness.</li>
                     <li>Organized back-end interface and features by implementing socket.io for real time response.</li>
@@ -272,7 +272,7 @@
                 <div class="media-body">
                     <h4 class="media-heading">Practice self defense (Krav-Maga)</h4>
                     <ul>
-                        <li>Working on my next practitioner rank</li>
+                        <li>Working on my next practitioner rank.</li>
                     </ul>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                 <div class="media-body">
                     <h4 class="media-heading">Enjoy planning trips and exploring new cultures</h4>
                     <ul>
-                        <li>Recently visited Nicaragua and Costa Rica</li>
+                        <li>Recently visited Nicaragua and Costa Rica.</li>
                     </ul>
                 </div>
             </div>
